--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -18,14 +18,13 @@
 
 <body>
 
-    <!-- $issue likes global var in current page -->
-    {{$issue := .issueData}}
-
     <div class="navbar navbar-default">
         <div class="container">
             {{template "navbar" .}}
         </div>
     </div>
+
+    {{$issue := .issueData}}
 
     <script>
         window.onload=function(){
@@ -35,20 +34,15 @@
     </script>
 
     <div class="container">
-        <div>
-            <label style="font-size:3rem">Issue: </label><span> </span><label style="font-size:2.25rem"><a href="#">#{{$issue.ID}}
-                    {{$issue.Title}}</a></label>
-        </div>
+        <label style="font-size:3rem">Issue: </label><label style="font-size:2.25rem"><a href="#">#{{$issue.ID}} {{$issue.Title}}</a></label>
+    </div>
 
-        {{template "seperate-line"}}
+    <div class="container alert-box alert-lvl-{{$issue.Priority}}">
+        <!-- <div id="issue-level-band" class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div> -->
+        <div class="issue issue-detail" id="issue-detail-{{$issue.ID}}">{{$issue.Description}}</div>
+    </div>
 
-        <div>
-            <label class="left" style="font-size:2rem;width:100%">Description:</label>
-            <div class="issue issue-detail" id="issue-detail-{{$issue.ID}}" style="margin-left:3em;width:100%;">{{$issue.Description}}</div>
-        </div>
-
-        <div id="issue-level-band" class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div>
-
+    <div class="container clearfix card">
         <form id="frmIssueUpdate" method="POST" action="#" onsubmit="return false">
             <!-- <div class="form-group"> -->
             {{range .issueHTMLValue}}
@@ -58,10 +52,7 @@
         </form>
     </div>
 
-
     <div class="container">
-
-        {{template "seperate-line"}}
 
         <form id="frmIssueDetail" method="POST" action="#" onsubmit="return false">
 
@@ -93,69 +84,62 @@
 
     <div class="container">
 
-        {{template "seperate-line"}}
+        <div id="issue_log_history" class="clearfix card">
+            <h2>History:</h2>
 
-        <!-- 历史记录区 -->
-        <div id="issue_log_history">
-            <label style="font-size:2rem">History:</label>
+            <!-- for issue log history loop -->
+            {{range $index, $log := .issueLogHistory}}
+            <!-- avatar canvas' local variable -->
+            {{$avaterName := printf "user_avatar_%d" $log.CreatorID}}
+            <div class="col span_2of6">
+                <div class="log-user-icon">
+                    <canvas id="{{$avaterName}}" name="{{$avaterName}}" class="log-avatar" width="48px" height="48px"></canvas>
+                    <script type="text/javascript">
+                        $('#{{$avaterName}}').ready(function () {
+                            appendAvatarCanvasCollection(
+                                "{{$avaterName}}",
+                                "{{$log.CreatorName}}");
+                        })
+                    </script>
+                </div>
+                <div class="log-user-info">
+                    <div>
+                        <p style="font-size:1.75rem;"><a href="/person/{{$log.CreatorID}}">{{$log.CreatorName}}</a></p>
+                    </div>
+                    <div>
+                        <p style="font-size:1.5rem;">{{$log.TimeDisplay}}</p>
+                    </div>
+                </div>
+            </div>
 
-            <table class="table-body-log-history">
-                <tbody>
-                    <tr>
-                        <th style="width:30%;"></th>
-                        <th style="width:70%;"></th>
-                    </tr>
+            <div class="col span_4of6">
+                {{if eq $log.Type 1}}
+                <p>Issue status {{$log.StatusTitle}} had been changed from {{BugStatusWithType $log.PrvStatus}} into {{BugStatusWithType $log.NewStatus}}</p>
+                {{else}}
+                <div id="issue_comment_{{$index}}"></div>
+                <script>
+                    $("#issue_comment_{{$index}}").ready(function () {
+                        document.getElementById("issue_comment_{{$index}}").innerHTML = convertMDtoHtml(
+                            '{{$log.Content}}');
+                    });
+                </script>
+                {{end}}
 
-                    <!-- for issue log history loop -->
-                    {{range $index, $log := .issueLogHistory}}
-                    <!-- avatar canvas' local variable -->
-                    {{$avaterName := printf "user_avatar_%d" $log.CreatorID}}
+                <script type="text/javascript">
+                    $('#{{$avaterName}}').ready(function () {
+                        appendAvatarCanvasCollection(
+                            "{{$avaterName}}",
+                            "{{$log.CreatorName}}");
+                    })
+                </script>
+            </div>
 
-                    <tr>
-                        <td class="align-top log-brief-secion">
-                            <div class="log-user-icon">
-                                <canvas id="{{$avaterName}}" name="{{$avaterName}}" class="log-avatar" width="48px" height="48px"></canvas>
-                            </div>
-                            <div class="log-user-info">
-                                <div>
-                                    <p style="font-size:1.75rem;"><a href="/person/{{$log.CreatorID}}">{{$log.CreatorName}}</a></p>
-                                </div>
-                                <div>
-                                    <p style="font-size:1.5rem;">{{$log.TimeDisplay}}</p>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="log-detail-section align-top">
-                            {{if eq $log.Type 1}}
-                            <p>Issue status {{$log.StatusTitle}} had been changed from {{BugStatusWithType $log.PrvStatus}} into {{BugStatusWithType $log.NewStatus}}</p>
-                            {{else}}
-                            <div id="issue_comment_{{$index}}"></div>
-                            <script>
-                                $("#issue_comment_{{$index}}").ready(function () {
-                                    document.getElementById("issue_comment_{{$index}}").innerHTML =
-                                        convertMDtoHtml('{{$log.Content}}');
-                                });
-                            </script>
-                            {{end}}
+            {{$isLastOne := isLastItemIn $index $.issueLogHistory}}
+            {{if not $isLastOne}}
+            <hr>
+            {{end}}
 
-                            <script type="text/javascript">
-                                $('#{{$avaterName}}').ready(function () {
-                                    appendAvatarCanvasCollection(
-                                        "{{$avaterName}}",
-                                        "{{$log.CreatorName}}");
-                                })
-                            </script>
-                        </td>
-                    </tr>
-                    <tr class="spacer">
-                        <td colspan="2"></td>
-                    </tr>
-
-                    {{end}}
-                    <!-- end for issueLogHistory loop -->
-
-                </tbody>
-            </table>
+            {{end}}
 
         </div>
 
@@ -164,7 +148,7 @@
                 refreshAllAvatar();
             })
         </script>
-    </div>
+
     </div>
 
 </body>
