--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -29,7 +29,7 @@
     <script>
         window.onload=function(){
             // sorry about that, description should be refreshed after the whole page content were loadded.
-            document.getElementById("issue-detail-{{$issue.ID}}").innerHTML = convertMDtoHtml('{{$issue.Description}}');
+            refreshAllMarkdown();
         }
     </script>
 
@@ -38,8 +38,12 @@
     </div>
 
     <div class="container alert-box alert-lvl-{{$issue.Priority}}">
-        <!-- <div id="issue-level-band" class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div> -->
         <div class="issue issue-detail" id="issue-detail-{{$issue.ID}}">{{$issue.Description}}</div>
+        <script>
+            $('#issue-detail-{{$issue.ID}}').ready(function() {
+                appendMarkdownCollection("issue-detail-{{$issue.ID}}", "{{$issue.Description}}");
+            });
+        </script>
     </div>
 
     <div class="container clearfix card">
@@ -88,56 +92,9 @@
             <h2>History:</h2>
 
             <!-- for issue log history loop -->
-            {{range $index, $log := .issueLogHistory}}
-            <!-- avatar canvas' local variable -->
-            {{$avaterName := printf "user_avatar_%d" $log.CreatorID}}
-            <div class="col span_2of6">
-                <div class="log-user-icon">
-                    <canvas id="{{$avaterName}}" name="{{$avaterName}}" class="log-avatar" width="48px" height="48px"></canvas>
-                    <script type="text/javascript">
-                        $('#{{$avaterName}}').ready(function () {
-                            appendAvatarCanvasCollection(
-                                "{{$avaterName}}",
-                                "{{$log.CreatorName}}");
-                        })
-                    </script>
-                </div>
-                <div class="log-user-info">
-                    <div>
-                        <p style="font-size:1.75rem;"><a href="/person/{{$log.CreatorID}}">{{$log.CreatorName}}</a></p>
-                    </div>
-                    <div>
-                        <p style="font-size:1.5rem;">{{$log.TimeDisplay}}</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col span_4of6">
-                {{if eq $log.Type 1}}
-                <p>Issue status {{$log.StatusTitle}} had been changed from {{BugStatusWithType $log.PrvStatus}} into {{BugStatusWithType $log.NewStatus}}</p>
-                {{else}}
-                <div id="issue_comment_{{$index}}"></div>
-                <script>
-                    $("#issue_comment_{{$index}}").ready(function () {
-                        document.getElementById("issue_comment_{{$index}}").innerHTML = convertMDtoHtml(
-                            '{{$log.Content}}');
-                    });
-                </script>
-                {{end}}
-
-                <script type="text/javascript">
-                    $('#{{$avaterName}}').ready(function () {
-                        appendAvatarCanvasCollection(
-                            "{{$avaterName}}",
-                            "{{$log.CreatorName}}");
-                    })
-                </script>
-            </div>
-
-            {{$isLastOne := isLastItemIn $index $.issueLogHistory}}
-            {{if not $isLastOne}}
-            <hr>
-            {{end}}
+            {{range .issueLogHistory}}
+            
+            {{template "issueLogItem" .}}
 
             {{end}}
 
@@ -146,7 +103,7 @@
         <script type="text/javascript">
             $('#issue_log_history').ready(function () {
                 refreshAllAvatar();
-            })
+            });
         </script>
 
     </div>
