--- a/static/css/FFTechStyle/UI/ff_common.css
+++ b/static/css/FFTechStyle/UI/ff_common.css
@@ -1,5 +1,3 @@
-
-
 .col {
     display: block;
     float: left;
@@ -7,16 +5,28 @@
     padding-right: 2%;
 }
 
+.span_1of6 {
+    width: 16%;
+}
+
 .span_2of6 {
     width: 32%;
+}
+
+.span_3of6 {
+    width: 49.5%;
 }
 
 .span_4of6 {
     width: 66%;
 }
 
+.span_5of6 {
+    width: 83%;
+}
+
 .clearfix {
-    zoom: 1;
+    zoom: auto;
 }
 
 .card {
@@ -28,6 +38,16 @@
     border-radius: .5rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .08);
 }
+
+.card .card-content {
+    background-color: #fff;
+}
+
+.card .card-content .card-button-area {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+} 
 
 .alert-box {
     position: relative;
@@ -86,5 +106,5 @@
 }
 
 .seperate-line {
-    FILTER: alpha(opacity=100,finishopacity=0,style=3);
+    FILTER: alpha(opacity=100, finishopacity=0, style=3);
 }
