--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -57,23 +57,23 @@
     </div>
 
     <!-- issue的状态selector集合 -->
-    <div class="container clearfix card">
-        <form id="frmIssueUpdate" method="POST" action="#" onsubmit="return false">
-            <!-- <div class="form-group"> -->
-            {{range .issueHTMLValue}}
-            {{template "dataPickerTemplate" .}}
-            {{end}}
-            <!-- </div> -->
-        </form>
+    <div class="container">
+        <div class="clearfix card">
+            <form id="frmIssueUpdate" method="POST" action="#" onsubmit="return false">
+                {{range .issueHTMLValue}}
+                {{template "dataPickerTemplate" .}}
+                {{end}}
+            </form>
+        </div>
     </div>
 
     <!-- 评论编辑区 -->
     <div class="container">
 
+        <label style="font-size:2rem">New Comment:</label>
         <form id="frmIssueDetail" method="POST" action="#" onsubmit="return false">
 
-            <label style="font-size:2rem">New Comment:</label>
-            <div id="issue_log_new" class="form-group" style="margin-left: 3em;">
+            <div id="issue_log_new" class="form-group">
                 <textarea name="issue_comment" id="issue_comment" class="form-control" cols="30" rows="10" placeholder="Write new comment here."></textarea>
                 <input id="btnCommitComment" name="{{$issue.ID}}" style="margin-top:1em;" type="submit" class="btn btn-default" value="Submit">
                 <input id="btnAttachImage" name="attachImage" type="file" data-url="/issuedetail/{{$issue.ID}}/newattach" multiple>
