wip: 数据选择组件数据模型在go中的类型动态判断

--- a/views/issueNew.html
+++ b/views/issueNew.html
@@ -30,8 +30,15 @@
             </div>
 
             <!-- bug的各种状态设置 -->
-            {{range .issueHTMLValue}}
-                {{template "dataPickerTemplate" .}}
+            {{range $idx, $issueTpl := .issueHTMLValue}}
+                {{$ctrlType := ControllerTypeOfTemplateData $issueTpl}}
+                {{if eq $ctrlType 3}}
+                <h4>we get {{$ctrlType}}</h4>
+                {{else if eq $ctrlType 2}}
+                {{template "dataPickerTemplate" $issueTpl}}
+                {{else if eq $ctrlType 1}}
+                <h4>we get {{$ctrlType}}</h4>
+                {{end}}
             {{end}}
 
             <!-- 分割线 -->
