--- a/static/css/FFTechStyle/UI/ff_common.css
+++ b/static/css/FFTechStyle/UI/ff_common.css
@@ -1,3 +1,4 @@
+
 .col {
     display: block;
     float: left;
@@ -76,18 +77,14 @@
     border: 1px solid #e8e8e8;
     background-color: #fff;
     border-radius: .5rem;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .08);
-}
-
-.card .card-content {
-    background-color: #fff;
-}
-
-.card .card-content .card-button-area {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-} 
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .08);}
+    .card.card-content {
+        background-color: #fff;}
+    .card .card-button-area, 
+    .card-content .card-button-area  {
+        position: absolute;
+        top: 16px;
+        right: 16px;} 
 
 .alert-box {
     position: relative;
@@ -98,42 +95,23 @@
     margin: 0px auto 2rem;
     border-radius: .5rem;
     background: #fff;
-    color: #2c2d30;
-}
-
-.alert-box.alert-lvl-0 {
-    border-left-color: black;
-}
-
-.alert-box.alert-lvl-1 {
-    border-left-color: red;
-}
-
-.alert-box.alert-lvl-2 {
-    border-left-color: orangered;
-}
-
-.alert-box.alert-lvl-3 {
-    border-left-color: orange;
-}
-
-.alert-box.alert-lvl-4 {
-    border-left-color: yellow;
-}
-
-.alert-box.alert-lvl-5 {
-    border-left-color: yellowgreen;
-}
-
-.alert-box.alert-lvl-6 {
-    border-left-color: lightgreen;
-}
-
-label.standard-ff {
-    min-width: 95px;
-    max-width: 100%;
-}
+    color: #2c2d30;}
+    .alert-box.alert-lvl-0 {
+        border-left-color: black;}
+    .alert-box.alert-lvl-1 {
+        border-left-color: red;}
+    .alert-box.alert-lvl-2 {
+        border-left-color: orangered;}
+    .alert-box.alert-lvl-3 {
+        border-left-color: orange;}
+    .alert-box.alert-lvl-4 {
+        border-left-color: yellow;}
+    .alert-box.alert-lvl-5 {
+        border-left-color: yellowgreen;}
+    .alert-box.alert-lvl-6 {
+        border-left-color: lightgreen;}
 
 .seperate-line {
     FILTER: alpha(opacity=100, finishopacity=0, style=3);
 }
+
