--- a/static/css/FFTechStyle/UI/ff_global.css
+++ b/static/css/FFTechStyle/UI/ff_global.css
@@ -1,3 +1,16 @@
 body {
     background-color: #f9f9f9;
 }
+
+label.standard-ff {
+    min-width: 95px;
+    max-width: 100%;
+}
+
+canvas.avatar {
+    margin: 4px 4px 4px 4px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
