--- a/views/initiativeNew.html
+++ b/views/initiativeNew.html
@@ -21,9 +21,11 @@
         <div class="card clearfix">
             <span>hello world</span>
 
-            <div class="span span_3of6">
-                {{template "inputFieldTemplate" .}}
+            {{range $index, $section := .modelPropertySection}}
+            <div class="span span_3of6 clearfix">
+                {{template "inputFieldTemplate" $section}}
             </div>
+            {{end}}
         </div>
     </div>
     
