--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -79,7 +79,7 @@
             <div id="issue_log_new" class="form-group">
                 <textarea name="issue_comment" id="issue_comment" class="form-control" cols="30" rows="10" placeholder="Write new comment here."></textarea>
 
-                <input id="btnCommitComment" name="{{$issue.ID}}" type="submit" class="btn btn-default" style="width:150px" value="Submit">
+                <input id="btnCommitComment" name="{{$issue.ID}}" type="submit" class="btn btn-danger" style="width:150px;" value="Submit">
                 <span class="btn btn-success fileinput-button" style="width:150px">
                     <i class="glyphicon glyphicon-plus"></i>
                     <span>Add image...</span>
