--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -18,7 +18,8 @@
             <h1>Hi{{.ProjectTitle}} <small> world</small></h1>
         </div>
 
-        <a href="/issue">New issue</a>
+        <a href="/initiative"><span class="btn btn-default">New Project</span></a>
+        <a href="/issue"><span class="btn btn-default">New issue</span></a>
 
         <!-- 分割线 -->
         <div style="height:1px">
