--- a/views/initiativeNew.html
+++ b/views/initiativeNew.html
@@ -1,26 +1,32 @@
 <!doctype html>
 <html>
 
-<head>
-    {{template "header" .}}
-    <link rel="stylesheet" href="/static/css/FFTechStyle/UI/ff_global.css">
-    <link rel="stylesheet" href="/static/css/FFTechStyle/UI/ff_common.css">
-</head>
+    <head>
+        {{template "header" .}}
+        <link rel="stylesheet" href="/static/css/FFTechStyle/UI/ff_global.css">
+        <link rel="stylesheet" href="/static/css/FFTechStyle/UI/ff_common.css">
 
-<body>
+        <link href="/static/bootstrap-datepicker-1.6.4/css/bootstrap-datepicker.min.css" type="text/css" rel="stylesheet">
+        <script src="/static/bootstrap-datepicker-1.6.4/js/bootstrap-datepicker.min.js"></script>
 
-    <div class="navbar navbar-default">
-        <div class="container">
-            {{template "navbar" .}}
+        <script type="text/javascript" src="/static/js/features/initiativeNew.js"></script>
+
+    </head>
+
+    <body>
+
+        <div class="navbar navbar-default">
+            <div class="container">
+                {{template "navbar" .}}
+            </div>
         </div>
-    </div>
 
-    <div class="container">
-        <h1>Create new initiative:</h1>
+        <div class="container">
+            <h1>Create new project:</h1>
 
-        <div class="card clearfix">
+            <div class="card clearfix">
 
-            <div class="span span_3of6 span_float_left clearfix">
+                <div class="span span_4of6 span_float_left clearfix">
                     {{range $index, $section := .modelPropertySection}}
                     <div class="span span_full clearfix">
                         <!-- {{$section}} -->
@@ -35,20 +41,28 @@
                         {{else if eq $ctrlType 3}}
                         {{template "dataPickerTemplate" $section}}
 
+                        {{else if eq $ctrlType 4}}
+                        {{template "dataDatePickerTemplate" $section}}
+
                         {{end}}
                     </div>
                     {{end}}
-            </div>
 
-            <div class="span span_3of6 span_float_right clearfix">
-                <span>hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, hello world, </span>
-            </div>
+                </div>
 
+                <div class="span span_2of6 span_float_right clearfix">
+                    <span>hello world, hello world, hello world, hello world, hello world, hello world, hello world,
+                        hello world, hello world, hello world, hello world, hello world, hello world, hello world,
+                        hello world, hello world, hello world, hello world, hello world, hello world, hello world,
+                        hello world, hello world, hello world, hello world, hello world, hello world, </span>
+                </div>
+
+            </div>
         </div>
-    </div>
-    
-</body>
 
-{{template "bootstrap_end"}}
+
+    </body>
+
+    {{template "bootstrap_end"}}
 
 </html>
