--- a/static/css/FFTechStyle/UI/ff_common.css
+++ b/static/css/FFTechStyle/UI/ff_common.css
@@ -116,3 +116,8 @@
     FILTER: alpha(opacity=100, finishopacity=0, style=3);
 }
 
+.shadow {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .08); }
+    .shadow:hover {
+        box-shadow: 0 1px 5px 0 rgb(0, 0, 255, 0.5); }
+
