--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        {{template "header"}}
+        {{template "header" .}}
         <script src="/static/js/features/register.js"></script>
     </head>
 <body>
